--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="/whodo/styles.css" />
 </head>
 
-<body ng-cloak ng-controller='MainCtrl as mainCtrl'>
+<body  ng-controller='MainCtrl as mainCtrl'>
 
     <!-- navbar -->
     <header>
@@ -34,11 +34,14 @@
     </header>
 
     <!-- success message -->
-    <div class="input-saved-alert container" ng-show='mainCtrl.recentlySaved'>
+<!--     <div class="input-saved-alert container" ng-show='mainCtrl.recentlySaved'>
         <div class="alert alert-success">
             Input Saved!
         </div>
-    </div>
+    </div> -->
+
+    <div class='container'>HELLO EVERYBODY!</div>
+
 
     
 
@@ -63,7 +66,7 @@
 
     <!-- my JavaScript -->
     <script src='app.js'></script>
-    
+
 </body>
 </html>
 
