--- a/index.html
+++ b/index.html
@@ -46,26 +46,26 @@
                     <table class='table table-striped table-bordered'>
                         <thead>
                             <th>
-                                <a href="#" ng-click='mac.sortBy("complete")'>
-                                    Complete
+                                <a href ="#" ng-click='mac.sortBy("complete")'>
+                                    COMPLETE
                                 </a>
-                                <span class="sortorder" ng-show='mac.order === "complete" ' ng-class="{reverse: mac.reverse}"></span>
+                                <span class="sortorder" ng-show='mac.order === "complete" ' ng-class="{reverse:mac.reverse}"></span>
                             </th>
                             <th>
                                 <a href ="#" ng-click='mac.sortBy("info")'>
-                                    Task
+                                    TASK
                                 </a>
-                                <span class="sortorder" ng-show='mac.order === "info" ' ng-class="{reverse: mac.reverse}"></span>
+                                <span class="sortorder" ng-show='mac.order === "info" ' ng-class="{reverse:mac.reverse}"></span>
                             </th>
                             <th>
                                 <a href ="#" ng-click='mac.sortBy("dateDue")'>
-                                    Date Due
+                                    DATE DUE
                                 </a>    
                                 <span class="sortorder" ng-show='mac.order === "dateDue" ' ng-class="{reverse:mac.reverse}"></span>
                             </th>
                             <th>
                                 <a href ="#" ng-click='mac.sortBy("dateAdded")'>
-                                    Date Added
+                                    DATE ADDED
                                 </a>    
                                 <span class="sortorder" ng-show='mac.order === "dateAdded" ' ng-class="{reverse:mac.reverse}"></span>
                             </th>
@@ -75,9 +75,9 @@
 
                             <!-- list existing tasks -->
                             <tr ng-repeat="task in mac.savedTasks | orderBy: mac.order:mac.reverse">
-                                <td>
-                                    <input type='image' src="uncomplete.png" alt="complete" ng-show='task.complete == false' ng-click="mac.completeTask($index)">
-                                    <input type='image' src="complete.png" alt="uncompleted" ng-show='task.complete == true' ng-click="mac.uncompleteTask($index)">
+                                <td class="complete-image">
+                                    <input type='image' src="uncomplete.png" alt="uncomplete" ng-show='task.complete == false' ng-click="mac.completeTask($index)">
+                                    <input type='image' src="complete.png" alt="completed" ng-show='task.complete == true' ng-click="mac.uncompleteTask($index)">
                                 </td>
                                 <td>
                                     <a href="#" ng-click="mac.editTask($index, 'info')">
@@ -131,7 +131,7 @@
 
     <!--test-->
     <div class="well">
-        {{ mac.savedTasks | json}}
+        {{ mac.savedTasks | json }}
     </div>
 
         
