--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Vollkorn">
 
     <!-- my stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/whodo/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body ng-controller='MainCtrl as mac'>
