hid debug info for deployment

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 
 
     <!--test-->
-    <pre>
+    <!-- <pre>
         {{ mac.savedTasks | json }}
-    </pre>
+    </pre> -->
 
         
     <!-- footer -->
